--- a/skills.html
+++ b/skills.html
@@ -51,7 +51,7 @@
     <div class="nav-container">
       <div class="logo"><span>Vishaal RGS</span></div>
       <div class="links">
-        <div class="link"><a href="vishaalportfolio.html">Home</a></div>
+        <div class="link"><a href="index.html">Home</a></div>
         <div class="link"><a href="about.html">About</a></div>
         <div class="link"><a href="skills.html">Skills</a></div>
         <div class="link"><a href="projects.html">Projects</a></div>
@@ -61,7 +61,7 @@
     </div>
     <div class="dropdown">
       <div class="links">
-        <a href="vishaalportfolio.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="skills.html">Skills</a>
         <a href="projects.html">Projects</a>
